--- a/angularapp/src/app/useraddappointment/useraddappointment.component.html
+++ b/angularapp/src/app/useraddappointment/useraddappointment.component.html
@@ -6,30 +6,6 @@
       </div>
   </div>
  
-  <!-- Carousel -->
-  <!-- Uncomment if needed -->
-  <!-- <div id="carouselExample" class="carousel slide mb-5" data-bs-ride="carousel">
-      <div class="carousel-inner">
-          <div class="carousel-item active">
-              <img src="/assets/carimage.webp" class="d-block w-100" alt="Service Worker Repairing Vehicle">
-          </div>
-          <div class="carousel-item">
-              <img src="/assets/truckimage.jpg" class="d-block w-100" alt="Truck Image">
-          </div>
-          <div class="carousel-item">
-              <img src="/assets/truck.jpg" class="d-block w-100" alt="Truck Service">
-          </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-      </button>
-  </div> -->
- 
   <!-- Search Container -->
   <div class="d-flex justify-content-end mb-4">
       <div class="search-bar">
@@ -37,7 +13,7 @@
               <span class="input-group-text">
                   <i class="bi bi-search"></i>
               </span>
-              <input type="text" id="searchInput" [(ngModel)]="searchData" placeholder="Search service name" class="form-control">
+              <input type="text" id="searchInput" (keyup)="searchByService()" [(ngModel)]="searchData" placeholder="Search service name" class="form-control">
               <button (click)="searchByService()" class="btn btn-primary">Search</button>
           </div>
       </div>
