--- a/angularapp/src/app/adminnavbar/adminnavbar.component.css
+++ b/angularapp/src/app/adminnavbar/adminnavbar.component.css
@@ -92,7 +92,7 @@ body {
  
 .card button:hover,
 .dropdown-menu button:hover {
-  background-color: #007bff;
+  background-color: #575757;
   color: white;
   transform: scale(1.05);
 }
@@ -133,7 +133,7 @@ body {
 button {
   margin-top: 15px;
   padding: 10px 20px;
-  background-color: #007bff;
+  background-color: #575757;
   color: white;
   border: none;
   border-radius: 5px;
