--- a/angularapp/src/app/adminviewappointment/adminviewappointment.component.html
+++ b/angularapp/src/app/adminviewappointment/adminviewappointment.component.html
@@ -38,6 +38,8 @@
               <option value="Rejected" class="status-rejected">Rejected</option>
               <option value="Read" class="status-read">Read</option>
               <option value="Payment Requested" class="status-payment-requested">Payment Requested</option>
+              <option value="Completed" class="status-completed">Completed</option>
+
             </select>
           </td>
           <td>
