--- a/angularapp/src/app/footer/footer.component.html
+++ b/angularapp/src/app/footer/footer.component.html
@@ -16,7 +16,7 @@
       <div class="footer-right">
         <h4>Contact Us</h4>
         <p>Email: <a href="mailto:support@vroomdoc.com">support@vroomdoc.com</a></p>
-        <p>Phone: <a href="tel:+919999999999">+91 99999 99999</a></p>
+        <p>Phone: <a href="tel:+919999999999">+91 9604120534</a></p>
       </div>
     </div>
     <div class="footer-bottom">
