--- a/angularapp/src/app/navbar/navbar.component.html
+++ b/angularapp/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
 
-    <h2 class="navbar-title">Vehicle Service</h2>
+    <h2 class="navbar-title">VroomDoc</h2>
 
           <a class="navbar-link" routerLink="/home">Home</a>
           <a class="navbar-link" routerLink="/registration">Register</a>
