--- a/angularapp/src/app/useraddappointment/useraddappointment.component.html
+++ b/angularapp/src/app/useraddappointment/useraddappointment.component.html
@@ -65,7 +65,7 @@
   <!-- Optional: Success Confirmation Popup -->
   <div *ngIf="showPopup" class="popup-overlay">
       <div class="popup-form text-center">
-          <p>Appointment Added Successfully</p>
+          <p>Appointment Booked Successfully</p>
           <button class="btn btn-primary" (click)="closePopup()">Ok</button>
       </div>
   </div>
