--- a/angularapp/src/app/adminviewuserdetails/adminviewuserdetails.component.html
+++ b/angularapp/src/app/adminviewuserdetails/adminviewuserdetails.component.html
@@ -13,9 +13,7 @@
                 <th>S.NO</th>
                 <th>Customer Name</th>
                 <th>Email</th>
-                <th>Role</th>
                 <th>Mobile Number</th>
-                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -23,9 +21,7 @@
                 <td>{{i + 1}}</td>
                 <td>{{user.username}}</td>
                 <td>{{user.email}}</td>
-                <td>{{user.userRole}}</td>
                 <td>{{user.mobileNumber}}</td>
-                <td><button (click)="deleteUser(user.userId)">Delete</button></td>
             </tr>
         </tbody>
     </table>
@@ -36,7 +32,7 @@
             <p><b style="color: darkblue;">{{popupMessage}}</b></p>
             <p>Customer Name: {{user.username}}</p>
             <p>Email: {{user.email}}</p>
-            <p>User Role: {{user.userRole}}</p>
+            <p>Role: {{user.userRole}}</p>
             <p>Mobile Number: {{user.mobileNumber}}</p>
             <button (click)="closePopup()">Close</button>
         </div>
